edycja popup, dodanie instrukcji w readme
jak odpalić rozszerzenie u siebie, teraz praca nad logiką

--- a/popup.html
+++ b/popup.html
@@ -5,14 +5,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Transkrypcja</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <title>SMN: Transkrypcja</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
 
     <body>
         <h1>Transkrypcja spotkań</h1>
-        <button id="start-recording">Rozpocznij nagrywanie</button>
-        <button id="stop-recording">Zatrzymaj nagrywanie</button>
+        <button id="start-recording" class="btn btn-success">Rozpocznij nagrywanie</button>
+        <button id="stop-recording" class="btn btn-danger">Zatrzymaj nagrywanie</button>
         <p id="status">Gotowe do nagrywania.</p>
         <script src="popup.js"></script>
     </body>
